# laria

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md
core/: README.md  pyproject.toml
core/laria/: __init__.py  app.py  config.py  errors.py  scheduler.py
core/laria/auth/: __init__.py  service.py
core/laria/channels/: __init__.py  food_jobs.py  notifier.py  telegram.py
core/laria/connectors/: __init__.py
core/laria/engine/: __init__.py  core_tools.py  engine.py  prompts.py  tools.py
core/laria/ingest/: __init__.py  bank_statements.py
core/laria/llm/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  registry.py
core/laria/memory/: __init__.py  base.py  embedder.py  fake.py  (+3 more)
core/tests/: test_app.py  test_auth_service.py  test_channel_telegram.py  test_config.py  test_connector_compat.py  test_connector_dashboards.py  test_connector_ha.py  test_connector_ha_agenda.py  test_connector_ha_client.py  test_connector_mqtt.py  test_conversations_misc.py  test_engine.py  test_errors.py  test_finance.py  test_food.py  test_food_jobs.py  test_identity.py  test_ingest_bank_statements.py  test_lists.py  test_llm.py  test_memory.py  test_modules_events.py  test_modules_finance.py  test_modules_food_utilities.py  test_modules_lists.py  test_modules_news.py  test_modules_reminders.py  test_modules_search.py  test_nutrition.py  test_openai_provider.py  test_scheduler.py  test_security.py  test_web_admin.py  test_web_api.py  test_web_auth.py  test_web_finance.py  test_web_food.py  test_web_import.py  test_web_news_system.py  test_web_ws.py
(+117 files in other folders)
