[project]
name = "laria-core"
version = "0.1.0"
description = "LARIA core: provider-agnostic agentic engine, modules, storage."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
dependencies = [
    "anthropic>=0.40",
    "aiosqlite>=0.20",
    "aiohttp>=3.10",
    "apscheduler>=3.10",
    "ddgs>=6.0",
    "paho-mqtt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["laria*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
